<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <group>
                <item
                    android:id="@+id/nav_collection"
                    android:icon="@drawable/ic_storage_black_24dp"
                    android:title="@string/collections"
                    app:itemBackground="@drawable/ripple_effect"/>
                <item
                    android:id="@+id/nav_cart"
                    android:icon="@drawable/ic_shopping_cart_black_24dp"
                    android:title="@string/cart" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_supervisor_account_black_24dp"
                    android:title="@string/public_profile" />

                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/account" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_trending_flat_black_24dp"
                    android:title="@string/logout" />
        </group>
</menu>
