<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:scrollbars="none"
        android:overScrollMode="never"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/color_text_dark"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/color_text_dark"
                />

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/user_avatar_default"
                android:layout_marginTop="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerUsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="@dimen/input_text_size"
                    android:paddingVertical="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/input_text_size"
                    android:paddingVertical="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFirstNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="@dimen/input_text_size"
                    android:paddingVertical="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerLastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textSize="@dimen/input_text_size"
                    android:paddingVertical="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPasswordInput"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="@dimen/text_input_height"
                    android:singleLine="true"
                    android:textSize="@dimen/input_text_size"
                    android:textIsSelectable="false"
                    android:paddingVertical="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerConfirmPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/input_text_size"
                    android:textIsSelectable="false"
                    android:paddingVertical="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/haveAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/button_text_size"
                android:textColor="@color/color_text_dark"
                android:text="@string/already_have_account"
                android:textAllCaps="false"
                android:paddingHorizontal="0dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="120dp"
                android:layout_height="@dimen/login_button_height"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/register"
                android:textSize="@dimen/button_text_size"
                android:textAlignment="center"
                android:background="@drawable/login_button_shape"
                android:textAllCaps="false"
                />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>