<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    android:paddingTop = "8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="end"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text = "@string/booked_date"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/color_text_dark_gray"
            android:background="@drawable/progress_cell_tab_1_background"
            android:layout_marginTop="5dp"
            android:paddingStart="8dp"
            android:paddingEnd = "12dp"
            android:layout_marginEnd="-10dp"
            />
        <TextView
            android:id="@+id/bookedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bookmark_cell_tab_2_background"
            android:paddingHorizontal="8dp"
            android:textColor="@android:color/white"
            android:text = "Apr 2, 2020"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">
                <ImageView
                    android:id="@+id/bookmarkAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/default_album_art"
                    android:scaleType="fitXY"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/episodeNameTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-10dp"
                android:paddingStart="20dp"
                android:paddingEnd = "10dp"
                android:gravity="start|center"
                android:maxLines="2"
                android:lineSpacingMultiplier="1.5"
                android:textSize="18sp"
                android:textColor="@color/color_text_dark"
                android:background="@color/release_cell_button_group_background_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                >
                <TextView
                    android:id="@+id/segmentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text_dark_gray"
                    android:textSize="14sp"
                    android:textIsSelectable="true"
                    android:text = ""
                    />
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/toolbar_back"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:paddingHorizontal="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text = "@string/released_date"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/color_light_gray"
                    />
                <TextView
                    android:id="@+id/releaseDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textSize="13sp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/booked_time"
                android:textSize="12sp"
                android:gravity="center|end"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/release_cell_button_group_background"
            android:gravity="center_vertical"
            >
            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/playButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                app:materialIcon="play"
                app:materialIconColor="@color/release_cell_button_color"
                app:materialIconSize="@dimen/material_icon_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"/>

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/listenLaterButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                app:materialIcon="headphones"
                app:materialIconColor="@color/release_cell_button_color"
                app:materialIconSize="@dimen/material_icon_size"
                android:layout_toEndOf="@+id/playButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"/>

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/transcribeButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                app:materialIcon="microphone"
                app:materialIconColor="@color/release_cell_button_color"
                app:materialIconSize="@dimen/material_icon_size"
                android:layout_toEndOf="@+id/listenLaterButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"/>

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/quickViewButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="center"
                app:materialIcon="eye"
                app:materialIconColor="@color/release_cell_button_color"
                app:materialIconSize="@dimen/material_icon_size"
                android:layout_toEndOf="@+id/transcribeButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:id="@+id/bookedTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end|center"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:textColor="@color/color_text_dark_gray"
                android:text="01:21:46"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>